fixed spacing in header

--- a/Main/assets/css/styles.css
+++ b/Main/assets/css/styles.css
@@ -550,6 +550,7 @@ nav a:hover {
     }
 
     header h1 {
+        margin: 0rem 0rem 0rem 0rem;
         text-align: center;
     }
 }
